--- a/bin/build
+++ b/bin/build
@@ -20,6 +20,7 @@ cd "$TEMP_DIR/openresty-${OPENRESTY_VERSION}"
   -j8 \
   --with-pcre-jit \
   --with-http_realip_module \
+  --with-http_stub_status_module \
   --with-http_ssl_module \
   --prefix="$INSTALL_DIR"
 make install
