--- a/bin/build
+++ b/bin/build
@@ -36,5 +36,17 @@ luajit -v
 openresty -V
 luarocks --version
 
+luarocks install lua-resty-auto-ssl
+
+mkdir /etc/resty-auto-ssl
+chown -R root:www /etc/resty-auto-ssl/
+chmod -R 775 /etc/resty-auto-ssl
+
+openssl req -new -newkey rsa:2048 -days 3650 -nodes -x509 \
+  -subj '/CN=sni-support-required-for-valid-ssl' \
+  -keyout /etc/ssl/resty-auto-ssl-fallback.key \
+  -out /etc/ssl/resty-auto-ssl-fallback.crt
+
+
 openresty -V >& "$INSTALL_DIR/openresty-V.txt"
 tar -zcf "$1" -C "$(dirname "$INSTALL_DIR")" .
